<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu"
        android:orderInCategory="100"
        android:title="@string/main_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/goto_main"
                android:orderInCategory="101"
                android:title="@string/main_menu" />
            <item
                android:id="@+id/goto_practice"
                android:orderInCategory="101"
                android:title="@string/goto_practice" />
            <item
                android:id="@+id/goto_quiz"
                android:orderInCategory="101"
                android:title="@string/goto_quiz" />
            <item
                android:id="@+id/goto_progress"
                android:orderInCategory="101"
                android:title="@string/goto_progress" />
            <item
                android:id="@+id/goto_dictionary"
                android:orderInCategory="101"
                android:title="@string/goto_dictionary" />

        </menu>
    </item>
</menu>