<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library"
    android:backgroundTint="#90FFFFFF"
    android:backgroundTintMode="src_over"
    android:orientation="vertical">

    <TextView
        style="@style/EasyVocabularyTitleAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/you_got_answers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="150dp">

        <TextView
            android:id="@+id/user_quiz_summary_text_view"
            style="@style/EasyVocabularyBodyAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="30dp"
            android:text="@string/submit_quiz_answers" />

        <TextView
            style="@style/EasyVocabularyBodyAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/out_of_answers" />
    </LinearLayout>

    <Button
        android:id="@+id/correct_answers"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers" />

</LinearLayout>
